# qt-ribbon

./: .gitignore  CMakeLists.txt  README.md
cmake/: get_cpm.cmake
include/: RibbonAction  RibbonButton  RibbonCheckBox  RibbonComboBox  RibbonDropButton  RibbonFontManager  RibbonGroup  RibbonLineEdit  RibbonPushButton  RibbonSlider  RibbonTabBar  RibbonToolButton  RibbonWidget
src/: RibbonAction.h  RibbonButton.cpp  RibbonButton.h  RibbonButtonPlugin.h  RibbonCheckBox.cpp  RibbonCheckBox.h  RibbonCheckBoxPlugin.h  RibbonComboBox.cpp  RibbonComboBox.h  RibbonComboBoxPlugin.h  RibbonDropButton.cpp  RibbonDropButton.h  RibbonDropButtonPlugin.h  RibbonFontManager.cpp  RibbonFontManager.h  RibbonGroup.cpp  RibbonGroup.h  RibbonGroupPlugin.h  RibbonLineEdit.cpp  RibbonLineEdit.h  RibbonLineEditPlugin.h  RibbonPushButton.cpp  RibbonPushButton.h  RibbonPushButtonPlugin.h  RibbonResources.qrc  RibbonSlider.cpp  RibbonSlider.h  RibbonSliderPlugin.h  RibbonSpec.h  RibbonTabBar.cpp  RibbonTabBar.h  RibbonTheme.h  RibbonToolButton.cpp  RibbonToolButton.h  RibbonToolButtonPlugin.h  RibbonWidget.cpp  RibbonWidget.h  RibbonWidgetPlugin.h  RibbonWidgetsCollection.h
